<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4C4C4C"
    style="@style/principal"
    tools:context=".activity_componente_main">


    <LinearLayout
        android:id="@+id/bottom_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3"
        app:layout_constraintVertical_bias="1.0">

        <ImageButton
            android:id="@+id/imageButton2"
            style="@style/BotonGrande"
            android:text="@string/btn_text_profile"

            app:srcCompat="@drawable/perfilusuariocasa" />

        <ImageButton
            android:id="@+id/imageButton3"
            style="@style/BotonGrande"
            android:text="@string/btn_text_shield"

            app:srcCompat="@drawable/perfilusuarioescudo" />

        <ImageButton
            android:id="@+id/imageButton4"
            style="@style/BotonGrande"
            android:text="@string/btn_text_settings"

            app:srcCompat="@drawable/perfilusuarioajustes" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="410dp"
        android:layout_height="506dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/vpn"
                style="@style/BotonGrande"
                android:text="@string/vpn"
                android:textSize="34sp"
                tools:layout_editor_absoluteX="12dp"
                tools:layout_editor_absoluteY="203dp" />

            <Button
                android:id="@+id/passw"
                style="@style/BotonGrande"
                android:text="@string/passw"
                android:textSize="34sp"
                tools:layout_editor_absoluteX="12dp"
                tools:layout_editor_absoluteY="333dp" />

            <Button
                android:id="@+id/button3"
                style="@style/BotonGrande"
                android:text="@string/vpn"
                android:textSize="34sp"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="477dp" />
            <Button
                android:id="@+id/button4"
                style="@style/BotonGrande"
                android:text="@string/vpn"
                android:textSize="34sp"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="477dp" />
            <Button
                android:id="@+id/button5"
                style="@style/BotonGrande"
                android:text="@string/vpn"
                android:textSize="34sp"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="477dp" />
            <Button
                android:id="@+id/button6"
                style="@style/BotonGrande"
                android:text="@string/vpn"
                android:textSize="34sp"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="477dp" />
        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/Components"
        style="@style/fuente"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/components"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
